# cnninfer

./: .dockerignore  .gitignore  README.md  Tiltfile  poetry.toml  pyproject.toml  workspace.toml
bases/cnninfer/inferengine/: __init__.py  core.py
bases/cnninfer/webapp/: __init__.py  core.py
components/: dramatiq_actors.py  redis_broker.py
components/cnninfer/broker/: __init__.py  core.py
components/cnninfer/coco/: __init__.py  api.py
components/cnninfer/dto/: __init__.py  coco.py  dto.py
components/cnninfer/mmdetinfer/: __init__.py  mmdetect.py
components/cnninfer/storage/: __init__.py  core.py  s3storage.py
components/cnninfer/tasks/: __init__.py  core.py  tasks.py
deploy/: Chart.yaml  values.yaml
deploy/templates/: _helpers.tpl
deploy/templates/inferengine/: deployment.yaml  hpa.yaml  service.yaml
deploy/templates/tests/: test-connection.yaml
deploy/templates/webapp/: deployment.yaml  hpa.yaml  service.yaml
projects/inferengine/: Dockerfile  pyproject.toml
projects/webapp/: Dockerfile  pyproject.toml
test/bases/cnninfer/inferengine/: test_core.py
test/bases/cnninfer/webapp/: test_core.py
test/components/cnninfer/broker/: test_core.py
test/components/cnninfer/coco/: test_core.py
test/components/cnninfer/dto/: test_core.py
test/components/cnninfer/minio/: test_core.py
test/components/cnninfer/mmdetinfer/: test_core.py
test/components/cnninfer/storage/: test_core.py
test/components/cnninfer/tasks/: test_core.py
