[tool.poetry]
name = "cnninfer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "cnninfer/inferengine",from = "bases"},
    {include = "cnninfer/webapp",from = "bases"},
    {include = "cnninfer/broker",from = "components"},
    {include = "cnninfer/tasks",from = "components"},
    {include = "cnninfer/storage",from = "components"},
    {include = "cnninfer/coco",from = "components"},
    {include = "cnninfer/dto",from = "components"},
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
ruff = "^0.1.4"
dramatiq = {extras = ["redis", "watch"], version = "^1.15.0"}


[tool.poetry.group.web.dependencies]
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
minio = "^7.2.0"


[tool.poetry.group.worker.dependencies]
pydantic = "^2.4.2"
dramatiq = {extras = ["redis"], version = "^1.15.0"}
pydantic-settings = "^2.0.3"
minio = "^7.2.0"
requests = "^2.31.0"
pycocotools = "^2.0.7"



[tool.poetry.group.infer.dependencies]
torch = {version = "^2.1.0+cpu", source = "pytorch-cpu", markers = "sys_platform == 'linux' or sys_platform == 'win32'"}
torchvision = {version = "^0.16.0+cpu", source = "pytorch-cpu", markers = "sys_platform == 'linux' or sys_platform == 'win32'"}
torchaudio = {version = "^2.1.0+cpu", source = "pytorch-cpu", markers = "sys_platform == 'linux' or sys_platform == 'win32'"}
openmim = "^0.3.9"
minio = "^7.2.0"
pycocotools = "^2.0.7"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
mypy_path = ['components', 'bases']
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
select = ["ALL"]
ignore = ["D203", "D212", "COM812", "ISC001", "D100", "D103", "D104", "D101"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"test/**/*.py" = ["S101"]